# phase-vocoder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md
.github/workflows/: cmake-build-example.yml  cmake-build-test.yml  cmake-build-tests-then-ctest.yml
docker/clang/: Dockerfile
docker/gcc/: Dockerfile
docker/mingw/: Dockerfile
example/: CMakeLists.txt  FftwTransform.hpp  main-alsa.cpp  main-default.cpp  main.cpp  mono-live-vocoding.cpp  mono-live-vocoding.hpp
include/phase-vocoder/: Decimate.h  Expand.h  HannWindow.h  HannWindow.hpp  InterpolateFrames.h  InterpolateFrames.hpp  OverlapAdd.h  OverlapAdd.hpp  OverlapAddFilter.h  OverlapAddFilter.hpp  OverlapExtract.h  OverlapExtract.hpp  PhaseVocoder.hpp  SampleRateConverter.hpp  SignalConverter.h  SignalConverter.hpp  common-utility.h  model.h  model.hpp  utility.h  utility.hpp
lib/: CMakeLists.txt  HannWindow.cpp  InterpolateFrames.cpp  OverlapAdd.cpp  OverlapAddFilter.cpp  OverlapExtract.cpp  SignalConverter.cpp
lib/include/phase-vocoder/: HannWindow.hpp  InterpolateFrames.hpp  OverlapAdd.hpp  OverlapAddFilter.hpp  PhaseVocoder.hpp  SampleRateConverter.hpp  model.hpp  utility.hpp
lib/include/sbash64/phase-vocoder/: HannWindow.hpp  InterpolateFrames.hpp  OverlapAdd.hpp  OverlapAddFilter.hpp  OverlapExtract.hpp  PhaseVocoder.hpp  SampleRateConverter.hpp  SignalConverter.hpp  model.hpp  utility.hpp
phase-vocoder/: CMakeLists.txt
phase-vocoder/include/phase-vocoder/: Decimate.h  Expand.h  FirFilter.h  InterpolateFrames.h  OverlapAdd.h  OverlapAddFilter.h  OverlapExtract.h  PhaseVocoder.h  common-utility.h
phase-vocoder/src/: OverlapExtract.cpp
phase-vocoder/tests/: CMakeLists.txt  DecimateTests.cpp  ExpandTests.cpp  FirFilterTests.cpp  InterpolateFramesTests.cpp  OverlapAdd2Tests.cpp  OverlapAddFilterTests.cpp  OverlapAddTests.cpp  OverlapExtractTests.cpp  assert-utility.h
src/: InterpolateFrames.cpp  OverlapAdd.cpp  OverlapAddFilter.cpp  OverlapExtract.cpp  SignalConverter.cpp
tests/: CMakeLists.txt  ExpandTests.cpp  FirFilterTests.cpp  HannWindowTests.cpp  InterpolateFramesTests.cpp  OverlapAddFilterTests.cpp  OverlapAddTests.cpp  OverlapExtractTests.cpp  SampleRateConverterTests.cpp  SignalConverterTests.cpp  assert-utility.h  assert-utility.hpp
